--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "airbnb-clone",
+  "name": "gth",
+  "homepage": "https://globaltemphousing.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
