--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
@@ -20,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sass": "^1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
