--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@testing-library/user-event": "^7.2.1",
     "date-fns": "^2.15.0",
     "firebase": "^9.9.0",
+    "materialui-daterange-picker": "^1.1.92",
+    "moment": "^2.29.4",
     "react": "^16.13.1",
     "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
