--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
+    "react-material-file-upload": "^0.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
     "sass": "^1.53.0",
