--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "date-fns": "^2.15.0",
+    "date-fns": "^2.29.1",
     "firebase": "^9.9.0",
     "materialui-daterange-picker": "^1.1.92",
     "moment": "^2.29.4",
     "react": "^16.13.1",
-    "react-date-range": "^1.0.3",
+    "react-date-range": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
     "react-material-file-upload": "^0.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
+    "rsuite": "^5.16.1",
     "sass": "^1.53.0",
     "uuid": "^8.3.2"
   },
