--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-material-file-upload": "^0.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.29.0",
     "rsuite": "^5.16.1",
     "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
