--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
     "rsuite": "^5.16.1",
     "sass": "^1.53.0",
     "slick-carousel": "^1.8.1",
