--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
     "react-material-file-upload": "^0.0.4",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.29.0",
